Fix css value for toolbar spacing (#336)
This corrects a css value that was incorrectly added in a prior commit.

--- a/spreadsheets/resources/style.css
+++ b/spreadsheets/resources/style.css
@@ -32,7 +32,7 @@ div {
 #toolbar {
   display: flex;
   margin-top: 5px;
-  margin-bottom: 0px;
+  margin-bottom: 10px;
   margin-left: 10px;
   margin-right: 10px;
 }
